p5_game/kubernetes/scribble-fight-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scribble-fight-service
spec:
  selector:
    app: scribble-fight
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
