p5_game/kubernetes/scribble-fight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scribble-fight-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /t.rafetseder/scribble-fight/(.*)$
            pathType: Prefix
            backend:
              service:
                name: scribble-fight-service
                port:
                  number: 3000
